--- a/website.css
+++ b/website.css
@@ -12,10 +12,9 @@ a{
 }
 .navlist{
     width:100%;
-    padding: 5px 10vw;
+    padding: 15px 25vw;
     position: fixed;
     background-color: rgba(18, 18, 39, 0.9);
-    z-index: 10;
 }
 .navlist ul{
     display: flex;
@@ -27,6 +26,7 @@ a{
 .navlist ul h4{
     font-family: serif;
     color:#fff;
+    text-align: left;
 }
 .navlist ul a{
     margin-left: 20px;
