--- a/website.css
+++ b/website.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Century Gothic", sans-serif;
-    transition: 0.6s;
+    transition: 1s;
 }
 
 a{
@@ -13,8 +13,9 @@ a{
 .navlist{
     width:100%;
     padding: 15px 25vw;
-    position: fixed;
+    position: left;
     background-color: rgba(18, 18, 39, 0.9);
+    z-index: 10;
 }
 .navlist ul{
     display: flex;
@@ -39,7 +40,7 @@ a{
     width: 100%;
     height: 80vh;
     padding-top: 25vh;
-    background-image: linear-gradient(#000000c3,#000000c3), url(background.jpeg);
+    background-image: linear-gradient(#000000c3,#000000c3), url(newbackgorund.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -151,7 +152,7 @@ footer ul li{
 }
 .sub-navlist ul{
     display: flex;
-    margin-top: 100px;
+    margin-top: 20px;
     list-style: none;
 }
 .sub-navlist ul li:first-child{
@@ -223,7 +224,7 @@ footer ul li{
 }
 .class-box .column{
     width: 32%;
-    height: auto;
+    height: 100%;
     position:relative;
     overflow: hidden;
 }
