--- a/website.css
+++ b/website.css
@@ -216,7 +216,7 @@ footer ul li{
 .class-box>h2::before, .class-box>h2::after{
     content: "------";
     letter-spacing: -5px;
-    margin: 0 10px;
+    margin: 10px;
 }
 .class-box .row{
     display: flex;
@@ -224,18 +224,18 @@ footer ul li{
 }
 .class-box .column{
     width: 32%;
-    height: 100%;
-    position:relative;
-    overflow: hidden;
+    height: 50%;
+    position:column;
+    overflow:hidden;
 }
 .class-box img{
-    margin-top: 40%;
+    margin-top: 20%;
     width: 100%;
-    height: auto;
+    height:fit-content;
     padding: 5px 5px;
 }
 .class-box .column a:last-child{
-    position: absolute;
+    position:absolute;
     width: 100%;
     height: 0;
     top: 100%;
