--- a/website.css
+++ b/website.css
@@ -36,7 +36,18 @@ a{
 .navlist ul a:hover{
     color:rgb(142, 138, 138);
 }
+@keyframes slideInLeft{
+    from{
+        transform: translateX(-300px);
+    }
+    
+    to{
+        transform: translateX(0px);
+    }
+}
 .container{
+    font-family: 'Poppins',sans-serif;
+    display:block;
     width: 100%;
     height: 80vh;
     padding-top: 25vh;
@@ -46,11 +57,13 @@ a{
     background-repeat: no-repeat;
     text-align: center;
     color: #fff;
+    animation: slideInLeft 1s ease-in 0s 1 normal normal none;
 }
 .container h1{
     font-family: serif;
     margin-bottom: 20px;
     word-spacing: 5px;
+    animation: slideInLeft 1s ease-in 0s 1 normal normal none;
 }
 .container p{
     margin-bottom: 30px;
@@ -60,9 +73,12 @@ a{
     padding: 10px;
     background: none;
     border: 1px solid #ccc;
+    transition: transform 0.3s, background-color 0.3s;
 }
 .container button:hover{
     background: rgba(123, 123, 224, 0.9);
+    transform: translateY(-3px);
+    color: var(#f6f3f3c3);
 }
 
 .content-box{
@@ -249,4 +265,21 @@ footer ul li{
 .class-box .column:hover a:last-child{
     height:auto;
     top:auto;
+}
+@keyframes slideInLeft{
+    from{
+        transform: translateX(-300px);
+    }
+    
+    to{
+        transform: translateX(0px);
+    }
+}
+@keyframes slideInLeft {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
 }
